--- a/src/component/UserCard/index.css
+++ b/src/component/UserCard/index.css
@@ -14,3 +14,9 @@
     text-decoration: underline;
     font-family: "bree-serif";
 }
+.loader-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 100px;
+}
